<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_by_name"
        android:title="@string/action_sort_by_name"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_category"
        android:title="@string/action_sort_by_category"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_lists"
        android:title="@string/view_all_lists"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="999"
        app:showAsAction="never" />
</menu>